lact-daemon/src/tests/snapshots/lact_daemon__tests__apply_config__amd__rx7800xt__config-reset.yaml.snap
---
source: lact-daemon/src/tests/mod.rs
expression: write_commands
---
[
    "card1/device/power_dpm_force_performance_level: auto",
    "card1/device/pp_od_clk_voltage: r\n",
    "card1/device/pp_od_clk_voltage: c\n",
    "card1/device/gpu_od/fan_ctrl/fan_curve: r\n",
    "card1/device/power_dpm_force_performance_level: auto",
]
